syntax = "proto3";

option go_package = "github.com/stojic19/XWS-TIM15/common/proto/posts";

package posts;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

service PostsService{
  rpc GetAll(GetAllRequest) returns(GetAllResponse){
    option(google.api.http) = {
      get: "/posts/posts"
    };
  }
  rpc Get(GetRequest) returns(GetResponse){
    option(google.api.http) = {
      get: "/posts/posts/{id}"
    };
  }
  rpc GetFromUser(GetFromUserRequest) returns(GetFromUserResponse){
    option(google.api.http) = {
      get: "/posts/postsFromUser/{id}"
    };
  }
  rpc GetFromFollowed(GetFollowedRequest) returns(GetFollowedResponse){
    option(google.api.http) = {
      get: "/posts/postsFollowed/{id}"
    };
  }
  rpc GetFromPublic(GetPublicRequest) returns(GetPublicResponse){
    option(google.api.http) = {
      get: "/posts/public"
    };
  }
  rpc CreatePost(CreatePostRequest) returns(CreatePostResponse){
    option(google.api.http) = {
      post: "/posts/posts"
      body: "*"
    };
  }
  rpc LikePost(LikePostRequest) returns(LikePostResponse){
    option(google.api.http) = {
      put: "/posts/like"
      body: "*"
    };
  }
  rpc RemoveLike(RemoveLikeRequest) returns(RemoveLikeResponse){
    option(google.api.http) = {
      delete: "/posts/like"
      body: "*"
    };
  }
  rpc DislikePost(DislikePostRequest) returns(DislikePostResponse){
    option(google.api.http) = {
      put: "/posts/dislike"
      body: "*"
    };
  }
  rpc RemoveDislike(RemoveDislikeRequest) returns(RemoveDislikeResponse){
    option(google.api.http) = {
      delete: "/posts/dislike"
      body: "*"
    };
  }
  rpc CommentPost(CommentPostRequest) returns(CommentPostResponse){
    option(google.api.http) = {
      post: "/posts/comment"
      body: "*"
    };
  }
}

message GetAllRequest{

}

message GetAllResponse{
  repeated Post posts = 1;
}

message GetRequest{
  string id = 1;
}

message GetResponse{
  Post post = 1;
}

message GetFromUserRequest{
  string id = 1;
}

message GetFromUserResponse{
  repeated Post posts = 1;
}

message GetFollowedRequest{
  string id = 1;
}

message GetFollowedResponse{
  repeated Post posts = 1;
}

message GetPublicRequest{

}

message GetPublicResponse{
  repeated Post posts = 1;
}

message CreatePostRequest{
  NewPost newPost = 1;
}

message CreatePostResponse{
  string message = 1;
}

message LikePostRequest{
  string postId = 1;
  string userId = 2;
}

message LikePostResponse{
  string message = 1;
}

message RemoveLikeRequest{
  string postId = 1;
  string userId = 2;
}

message RemoveLikeResponse{
  string message = 1;
}

message DislikePostRequest{
  string postId = 1;
  string userId = 2;
}

message DislikePostResponse{
  string message = 1;
}

message RemoveDislikeRequest{
  string postId = 1;
  string userId = 2;
}

message RemoveDislikeResponse{
  string message = 1;
}

message CommentPostRequest{
  string postId = 1;
  string userId = 2;
  string content = 3;
}

message CommentPostResponse{
  string message = 1;
}

message NewPost{
  string title = 1;
  Content content = 2;
  User owner = 3;
}

message Post{
  string id = 1;
  string title = 2;
  Content content = 3;
  google.protobuf.Timestamp createTime = 4;
  User owner = 5;
  repeated Comment comments = 6;
  repeated User likes = 7;
  repeated User dislikes = 8;
}

message Content {
  string text = 1;
  repeated string links = 2;
  repeated string images = 3;
}

message User{
  string id = 1;
}

message Comment{
  User owner = 1;
  string content = 2;
  google.protobuf.Timestamp createTime = 3;
}

//protoc -I ./proto --go_out=./proto --go_opt=paths=source_relative --go-grpc_out=./proto --go-grpc_opt=paths=source_relative --grpc-gateway_out=allow_delete_body=true:./proto --grpc-gateway_opt=paths=source_relative ./proto/posts/posts.proto